# rumpus

./: .gitignore  .gitmodules  .hlint  Building.md  ChangeLog.md  CodePause.txt  Coming Soon.txt  Dummy.hs  ExperimentalMultiplayer.md  FloatingKinematicChildren-Refactor.txt  GettingStarted.md  KnobsAndCodeInterface.txt  LICENSE  LastReleaseAttempt.txt  MiniRelease.txt  MultiplaySession.txt  NewObjects.txt  NewRelease.txt  Notes.md  README.md  RUMPUS PROGRAMMING GUIDE  RUMPUS_PROGRAMMING_GUIDE.md  RefactorNotes.txt  Release.txt  Release6.txt  Render.txt  Rendering TODOs.txt  RumpusProgrammingGuide.md  SCRIPT  SERIOUSLYRELEASE.txt  SceneLoaderRoom.txt  SceneObjectInstance.txt  Segfault investigation.txt  Sketch.hs  TODAY.txt  TRAILER  Weekend.txt  Wishful.txt  matrixToYAML.hs  recorder.pd  (+9 more)
DevScenes/Sampleverse/: 0.yaml
DevScenes/Shoo/: Room.hs  gun-voice.pd
DevScenes/Volume/: RunAnalyzer.hs
app/: Control.hs  Entity.hs  Main.hs  Render.hs  Spatula.hs  Types.hs
notes/: MiniEntities.txt  Notes.md  RefactorNotes.txt  Release.txt  SceneObjectInstance.txt  TODAY.txt
notes/2016-04/: RefactorNotes.txt
notes/2016-05/: MiniEntities.txt  Notes.md  Release.txt  SceneObjectInstance.txt  Weekend.txt
notes/2016-06/: CodePause.txt  Coming Soon.txt  LastReleaseAttempt.txt  MultithreadedOpenGL.txt  NewRelease.txt  NewSense.txt  SERIOUSLYRELEASE.txt  SceneLoaderRoom.txt  ShapeSpeech.txt  krugetodos.txt
notes/topics/: ECS links  EKG  GHC API links  Haskell performance  Haskell tutorials for users
patches/kit/: ar2~.pd  array-get-random-n.pd  bl-asymtri.mmb~-help.pd  bl-pulse.mmb~.pd  bl-saw.mmb~-help.pd  bl-tri.mmb~-help.pd  blsaw~-help.pd  blsquare~.pd  degree-to-note.pd  fft-array~.pd  keypiano.pd  lin-xfade.mmb~.pd  list-index-help.pd  list-loop-help.pd  list-loop.pd  minipoly.pd  multidac~.pd  pan~.pd  phrase.pd  phraser.pd  sdac~-help.pd  sdac~.pd  tapedeck~.pd  to-multidac~.pd  vline2~.pd  xfade~.pd
pristine/: AlphabetSoup.hs  Attraction.hs  Bubbles.pd  City.hs  Cloud.hs  CubeFog.hs  CubeSea.hs  Door.hs  Fountain.hs  Fountain.pd  GameOfLife.hs  GameOfLifeBrush.hs  Grass.hs  Intro.hs  KeyPads.hs  Knob.hs  LABalls.hs  LookAtField.hs  LookAtField2.hs  LookAtFieldBug1.hs  LookAtFieldBug2.hs  MyObject1.hs  MyObject5.hs  MyObject5000.hs  MyObject6.hs  Note.hs  Note.pd  OrangeCubes.hs  Orrery.hs  Paint.hs  Platform.hs  Platforms.hs  Playhead.hs  Pool.hs  Profiler.hs  Ribbon.hs  Room.hs  Sampler.hs  Sampler.hs~  Sampler.pd  (+22 more)
pristine/Attraction/: Attraction.hs  Room.hs
pristine/City/: City.hs
pristine/Coding Guide/: M01Intro.hs  M02CreatingYourFirstObject.hs  M04CreatingEntities.hs  M05GivingLife.hs  M07AddingKnobs.hs
pristine/CubeSea/: CubeSea.hs  Platform.hs
pristine/Home/: DoorMaker.hs  Eraser.hs  Grass.hs  HandHelp.hs  Home.hs  Paint.hs  Platform.hs  Stars.hs
pristine/Intro/: Cloud.hs  Grass.hs  HandHelp.hs  Helix.hs  Seed.hs  Stars.hs  Telecaster.hs  Vine.hs
pristine/Jacobs Tune/: Note.hs  Playhead.hs  Sampler.hs
pristine/Little Tune/: Balls.hs  Note.hs  Playhead.hs
pristine/Little Tune 2/: Note.hs  Playhead.hs
pristine/Lobby/: Door.hs  Platform.hs  Stars.hs
pristine/Manual/: 01Intro.hs  02CreatingYourFirstObject.hs  03Start.hs  M03Start.hs  M04CreatingEntities.hs  M05GivingLife.hs  M06MultipleChildren.hs
pristine/MyScene1/: Note.hs
pristine/MyScene2/: AnimPaint.hs  Platform.hs
pristine/New Home/: Door.hs  Door2.hs  DoorMaker.hs  HandHelp.hs  Home.hs  Platform.hs
pristine/Painting/: AnimPaint.hs  Eraser.hs  Paint.hs  PersistentPaint.hs  ZeroGPaint.hs
pristine/QuantizedTune/: Note.hs  Playhead.hs
pristine/Ribbon/: DevinRibbon.hs  Ribbon.hs  RibbonRemix.hs
pristine/Room/: AlphabetSoup.hs  Flasher.hs  Fountain.hs  GameOfLife.hs  Orrery.hs  Profiler.hs  Room.hs  SquishingCube.hs  Tree.hs  VoiceRing.hs  WeirdExceptionBug.hs
pristine/Samplers/: Sampler.hs
pristine/Superformula/: Platforms.hs  Superformula.hs
pristine/Superformula1/: Superformula.hs
pristine/Swimming Pool/: Pool.hs
pristine/Synthesis/: Platforms.hs  Sampler.hs  Verylogue2.hs
pristine/Verylogue/: Verylogue2.hs
resources/: Loader.hs
resources/default-code/: DefaultCollision.hs  DefaultCollisionEnd.hs  DefaultCollisionStart.hs  DefaultStart.hs  DefaultUpdate.hs
resources/pd-kit/: adsr~.pd  ar4~.pd  array-get-random.pd  bl-asymtri.mmb~.pd  bl-init.mmb-help.pd  bl-pulse.mmb~-help.pd  bl-saw.mmb~.pd  bl-tri.mmb~.pd  blsaw~.pd  blsquare~-help.pd  fft-array~-help.pd  fft-reverb~.pd  keynamedown.pd  keypiano.pd  list-index.pd  list-repeat.pd  list-shuffle.pd  major-scale.pd  minor-scale.pd  ratelimit.pd  rescale~.pd  scales.pd  scope~-help.pd  scope~.pd  sdac~.pd  trisaw~.pd  u_splicetrans-help.pd  vco3~.pd  vline4~.pd  vphasor.mmb~.pd
resources/shaders/: default.frag  default.vert  defaultSingle.vert  glyph.frag  glyph.vert
scenes-old/: Verylogue-Devin-Chords.hs
scenes-old/fountain/: MessStart.hs  SoundCubeCollision.hs
scenes-old/sequencer/: NoteCollision.hs  NoteUpdate.hs  scene.yaml
scenes-old/spatula/: HandFireUpdate.hs  Spatula-Old.hs  SpatulaStart.hs  SpatulaUpdate.hs  scene.yaml
scenes/basic/: Basic.yaml  BasicStart.hs
scenes/cloning/: Tree.hs
scenes/fountain/: SoundCubeCollision.hs  scene.yaml
scenes/logo/: Room.hs
scenes/minimal/: DefaultUpdate.hs  scene.yaml
scenes/sampleverse/: 0.yaml  (+1 more)
scripts/: clone-dependencies.sh  copyLibsLinux.sh  copyLibsMac.sh  copyLibsWin.sh  remake-icon  rumpus-dev-profile  rumpus-exe  rumpus-exe-loop  rumpus-gdb  rumpus-gdb-loop  rumpus-profile  rumpus-profile-cleaner  rumpus-release  rumpus-release-dev  rumpus-release-with-logs  rumpus-run-loop  rumpus.rc  rumpus.res
shaders/: cube.frag  cube.vert
spatula/: HandFireUpdate.hs  Mess.hs  MessStart.hs  PlayHeadUpdate.hs  Spatula.hs  SpatulaStart.hs  SpatulaUpdate.hs  Wobble.hs  fountain.yaml  minimal.yaml  spatula.yaml  spatula1.pd  spatula2.pd
src/: PreludeExtra.hs  Rumpus.hs  RumpusLib.hs
topics/: CRT Emulation  Compute shader links  GHC API links  Generative shapes  Instanced Rendering links  Networking  VR Rendering
util/: WhatIsThis.txt  fakeGCC.hs
(+1848 files in other folders)
