name:                rumpus
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/rumpus#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library 
  hs-source-dirs:      src
  
  exposed-modules:     Rumpus.Types
                       Rumpus.Main
                       Rumpus.Systems.Animation
                       Rumpus.Systems.Attachment
                       Rumpus.Systems.CodeEditor
                       Rumpus.Systems.Collisions
                       Rumpus.Systems.Constraint
                       Rumpus.Systems.Controls
                       Rumpus.Systems.Hands
                       Rumpus.Systems.Lifetime
                       Rumpus.Systems.Render
                       Rumpus.Systems.Physics
                       Rumpus.Systems.PlayPause
                       Rumpus.Systems.SceneEditor
                       Rumpus.Systems.Script
                       Rumpus.Systems.Shared
                       Rumpus.Systems.Sound
                       Rumpus.Systems.Selection
                       Rumpus
                       PreludeExtra
  ghc-options:         -O2 -Wall 
  build-depends:       base
                     , bullet-mini
                     , gl-pal
                     , vr-pal
                     , glfw-pal
                     , random
                     , mtl
                     , lens-extra
                     , linear-extra
                     , containers
                     , unordered-containers
                     , MonadRandom
                     , pd
                     , yaml
                     , aeson
                     , freetype-gl-mini
                     , animation-pal
                     , stm
                     , halive
                     , time
                     , directory
                     , filepath
                     , template-haskell
                     , vault
                     , extensible-ecs
                     , transformers
  default-language:    Haskell2010

executable rumpus
  hs-source-dirs:      app
  main-is:             Main.hs
  -- -s/-S prints GC info (-S as it happens)
  -- -L50 changes length of cost center profile names in the .prof/.hp files
  -- ghc-options:         -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N -S -H512M -A4M"
  ghc-options:         -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N -s -H512M"
  -- -T collects runtime stats for use with GHC.Stats
  ghc-prof-options:    -O2 -Wall -threaded -rtsopts -prof -fprof-auto "-with-rtsopts=-N -T -p -S -H512M -A4M -L100"

  build-depends:       base, rumpus
  default-language:    Haskell2010
  
  -- -dynamic on OS X fixes an "unknown ___dso_handle symbol" error
  -- A different bug than what halive was hitting (https://ghc.haskell.org/trac/ghc/ticket/9278)
  -- but maybe just masking it and that one would pop up later.
  if os(osx)
    ghc-options: -dynamic

source-repository head
  type:     git
  location: https://github.com/lukexi/rumpus
