name:                rumpus
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/rumpus#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


Flag RumpusRelease
  Description:
    Configures Rumpus for release mode.
    For executable:
    * Routes console output to rumpus.log
    For library:
    * Instructs rumpus to copy and use the user document version of Scenes
    * Tells the CodeEditor system to use embedded versions of the package databases.
  Default:     False

Flag RumpusReleaseWithLogs
  Description:
    Overrides the logging portion of RumpusRelease so we can still
    see realtime console output from a release build of Rumpus.
  Default:     False

Flag RumpusProfile
  Description:
    Sets a runtime flag so we can tell if we're being profiled and turn off hot-code-loading
  Default:     False

library
  hs-source-dirs:      src
  if flag(RumpusRelease)
    cpp-options: -DRUMPUS_RELEASE
  if flag(RumpusProfile)
    cpp-options: -DRUMPUS_PROFILE
  exposed-modules:     Rumpus
                       RumpusLib
                       PreludeExtra
                       Rumpus.Main
                       Rumpus.TestScene
                       Rumpus.CopyScenes
                       Rumpus.Types
                       Rumpus.Systems.Animation
                       Rumpus.Systems.Attachment
                       Rumpus.Systems.Clock
                       Rumpus.Systems.Creator
                       Rumpus.Systems.CodeEditor
                       Rumpus.Systems.CodeEditorInput
                       Rumpus.Systems.Collisions
                       Rumpus.Systems.Constraint
                       Rumpus.Systems.Controls
                       Rumpus.Systems.Drag
                       Rumpus.Systems.EditorFrame
                       Rumpus.Systems.Hands
                       Rumpus.Systems.Haptics
                       Rumpus.Systems.KeyPads
                       Rumpus.Systems.Knobs
                       Rumpus.Systems.Lifetime
                       Rumpus.Systems.Render
                       Rumpus.Systems.Physics
                       Rumpus.Systems.PlayPause
                       Rumpus.Systems.Scene
                       Rumpus.Systems.SceneEditor
                       Rumpus.Systems.Script
                       Rumpus.Systems.Shared
                       Rumpus.Systems.Sound
                       Rumpus.Systems.Selection
                       Rumpus.Systems.Text
  ghc-options:         -O2 -Wall
  build-depends:       base
                     , pd-hs
                     , bullet-mini
                     , gl-pal
                     , vr-pal
                     , glfw-pal
                     , random
                     , mtl
                     , lens-extra
                     , linear-extra
                     , containers
                     , unordered-containers
                     , MonadRandom
                     , yaml
                     , aeson
                     , freetype-gl-mini
                     , animation-pal
                     , stm
                     , halive
                     , time
                     , directory
                     , filepath
                     , template-haskell
                     , vault
                     , extensible-ecs
                     , transformers
                     , vector
                     , deepseq
                     , exceptions
                     , parallel
                     , deepseq
                     , text-gl
  default-language:    Haskell2010

executable rumpus
  hs-source-dirs:      app
  main-is:             Main.hs
  -- -s/-S prints GC info (-S as it happens)
  -- -L50 changes length of cost center profile names in the .prof/.hp files
  -- ghc-options:         -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N -s -H512M -A4M"
  ghc-options:         -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N -H512m -A4M"
  -- ghc-options:         -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N -s -H512M"
  -- -T collects runtime stats for use with GHC.Stats
  ghc-prof-options:    -O2 -Wall -threaded -rtsopts -prof -fprof-auto "-with-rtsopts=-N -T -p -S -H512M -A4M -L100"

  build-depends:       base, rumpus, glfw-pal
  default-language:    Haskell2010

  -- -dynamic on OS X fixes an "unknown ___dso_handle symbol" error
  -- A different bug than what halive was hitting (https://ghc.haskell.org/trac/ghc/ticket/9278)
  -- but maybe just masking it and that one would pop up later.
  if os(osx)
    ghc-options: -dynamic
  if flag(RumpusProfile)
    cpp-options: -DRUMPUS_PROFILE

  if flag(RumpusRelease) && !flag(RumpusReleaseWithLogs)
    cpp-options: -DRUMPUS_RELEASE
    if os(windows)
      ghc-options:       -optl-mwindows

source-repository head
  type:     git
  location: https://github.com/lukexi/rumpus
